# political-dashboard-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.dev.yml  compose.nohttps.yml  compose.prod.yml  compose.staging.yml  compose.yml  docker-compose.yaml  docker-compose.yml  ingester.service  ingester.timer
.github/workflows/: build.yml  test.yml
api/: .dockerignore  .flake8  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  update-packages.sh
api/api/: database.py  dependencies.py  logic.py  main.py  models.py  utils.py
api/api/metadata/: description.md  description_facebook.md  description_media.md  description_twitter.md  main.py
api/api/routers/: administration.py  facebook.py  media.py  twitter.py
api/app/: config.py  database.py  main.py  models.py
api/app/routers/: facebook.py  media.py  twitter.py
api/tests/: test_database.py  test_dependencies.py  test_logic.py
cli/: pyproject.toml
cli/pdactl/: config.py  fetching.py  main.py  models.py  printing.py
cli/pdactl/commands/: key.py
docs/: endpoints.md
ingester/: .dockerignore  Dockerfile  mypy.ini  pyproject.toml  requirements.txt
ingester/ingester/: database.py  fetch.py  main.py  read.py
ingester/ingester/fetch/: preprocessing.py
ingester/ingester/transformation/: __init__.py  associations.py  main.py
ingester/tests/: test_ingester.py
receiver/: .dockerignore  .flake8  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  update-packages.sh
receiver/receiver/: database.py  facebook.py  main.py  media.py  twitter.py  utils.py
receiver/receiver/fetch/: __init__.py  endpoints.py  facebook.py  main.py  media.py  preprocessing.py  twitter.py  utils.py
receiver/receiver/fetch/preprocess/: facebook.py  media.py  twitter.py
receiver/tests/: test_receiver.py
