[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
motor = "^2.1.0"
uvicorn = "^0.11.5"
orjson = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
black = "^19.10b0"
bandit = "^1.6.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
