[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
motor = "^2.1.0"
uvicorn = "^0.11.7"
orjson = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
black = "^19.10b0"
bandit = "^1.6.2"
mypy = "^0.770"
flake8 = "^3.8.2"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pytest-asyncio = "^0.12.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
