[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.3.0"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
orjson = "^3.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
bandit = "^1.6.2"
mypy = "^0.782"
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"
isort = "^5.7.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
