[tool.poetry]
name = "pdactl"
version = "0.1.0"
description = "CLI to control & administrate the API for political-dashboard.com"
authors = ["nikstur <nikstur@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
requests = "^2.24.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = {extras = ["pyproject"], version = "^5.5.4"}
mypy = "^0.782"
bandit = "^1.6.2"

[tool.poetry.scripts]
pdactl = "pdactl.main:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
