[tool.poetry]
name = "receiver"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.3.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
bandit = "^1.6.2"
black = "^20.8b1"
mypy = "^0.782"
flake8 = "^3.8.4"
isort = {extras = ["pyproject"], version = "^5.5.4"}

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
