[tool.poetry]
name = "ingester"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.3.1"
aiohttp = "^3.7.4"
typer = "^0.3.2"
aiofiles = "^0.6.0"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
bandit = "^1.7.0"
black = "^20.8b1"
mypy = "^0.782"
flake8 = "^3.9.0"
isort = "^5.8.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
