[tool.poetry]
name = "receiver"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.1.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
bandit = "^1.6.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
