[tool.poetry]
name = "receiver"
version = "0.1.0"
description = ""
authors = ["Niklas Sturm"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.1.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
typer = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
bandit = "^1.6.2"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
isort = {extras = ["pyproject"], version = "^5.2.1"}

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
